added some changes

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,14 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=attendance_db
+DB_POOL_MIN=2
+DB_POOL_MAX=10
+DB_POOL_IDLE_MS=10000
+DB_POOL_ACQUIRE_MS=60000
 JWT_SECRET=change_me_please
 JWT_EXPIRES_IN=1d
 UPLOAD_DIR=uploads
 BCRYPT_SALT_ROUNDS=10
+SEED_HR_EMAIL=
+SEED_HR_PASSWORD=
+SEED_HR_NAME=
